Add discover feature

--- a/eventify/assets/translations/en-US.json
+++ b/eventify/assets/translations/en-US.json
@@ -1,3 +1,5 @@
 {
-    "title_app": "Eventify"
+    "title_app": "Eventify",
+    "title_discover": "Discover",
+    "title_settings": "Settings"
 }
