Add fetch events functionality

--- a/eventify/assets/translations/en-US.json
+++ b/eventify/assets/translations/en-US.json
@@ -1,5 +1,6 @@
 {
     "title_app": "Eventify",
     "title_discover": "Discover",
-    "title_settings": "Settings"
+    "title_settings": "Settings",
+    "error_fetch_events": "An error occurred while fetching the events."
 }
